@@ -4,6 +4,7 @@ django-sitemessage changelog
 
 Unreleased
 ----------
++ VKontakteMessenger. Added auxiliary '.get_access_token()' method.
 * Fixed loosing dispatch errors in some cases.
 
 
